fixed next/prev on cards and added stocc foto for when the image *explicit*s up fixes #41 fixes #44

--- a/app/templates/artists.html
+++ b/app/templates/artists.html
@@ -97,7 +97,7 @@
 				{% else %}
 					{{"http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=253575&type=card"}}
 				{% endif %}
-				class="img-fluid">
+				width="200" class="img-fluid">
 				<h4><a href={{"/artists&name=\"" ~ artist.name.replace(" ", "%20") ~ "\""}}>{{artist.name}}</a></h4>
 			</div>
 		{% endfor %}
