--- a/app/templates/cards-instance.html
+++ b/app/templates/cards-instance.html
@@ -5,7 +5,13 @@
 <link rel="stylesheet" type="text/css" href="/static/css/instance.css">
 <div id="instance-main">
 	<h1><strong>{{cards_instance.name}}</strong></h1>
-	<img src={{cards_instance.art}}>
+	<img src=
+	{% if cards_instance.art.lower() != "none" %}
+		{{ cards_instance.art }}
+	{% else %}
+		{{"http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=253575&type=card"}}
+	{% endif %}
+	class="img-fluid">
 
 	<h4><strong>Text: </strong>{{cards_instance.text}}</h4>
 	<h4><strong>Type: </strong>{{cards_instance.mainType}}</h4>
