--- a/app/templates/cool.html
+++ b/app/templates/cool.html
@@ -4,6 +4,7 @@
 <h1>This is an easter egg, congratulations!!!!<h1>
 <img src = 'static/images/nilo_old.png'>
 <img src = 'static/images/jose_old.png'>
-
+<img src = 'static/images/joel_old.png'>
+<img src = 'static/images/nicc_old.png'>
 
 {%endblock%}
