--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -14,7 +14,7 @@
 			<p>Nestor is a 3rd-year Computer Science major at the University of Texas at Austin. He is the current VP of Communications of Sigma Lambda Beta, a Latino-based multicultural Fraternity. In his free time, he enjoys exploring the outdoors, playing pool, and jamming out to the Red Hot Chili Peppers.<p>
 			<p><strong>Responsibilities: </strong>front-end, hosting</p>
 			<p><strong>Number of commits: 23</strong></p>
-			<p><strong>Number of issues: 4</strong></p>
+			<p><strong>Number of issues: 3</strong></p>
 			<p><strong>Number of unit tests: 0</strong></p>
 		</div>
 
@@ -24,7 +24,7 @@
 			<p>Nicholas is a 3rd-year Computer Science major at the University of Texas at Austin. Nicholas has interned at Google two times and is about to again this summer. In his free time, he enjoys writing music and participating in political clubs on campus.</p>
 			<p><strong>Responsibilities: </strong>front-end, coding</p>
 			<p><strong>Number of commits: 41</strong></p>
-			<p><strong>Number of issues: 1</strong></p>
+			<p><strong>Number of issues: 4</strong></p>
 			<p><strong>Number of unit tests: 0</strong></p>
 		</div>
 
@@ -44,7 +44,7 @@
 			<p>Nilo is a 4th-year Computer Science Major at UT Austin. He has interned twice at IBM both part-time and full-time. He really enjoys story-driven video games as well as archery and kendo.</p>
 			<p><strong>Responsibilities: </strong>back-end, Phase I Leader</p>
 			<p><strong>Number of commits: 21</strong></p>
-			<p><strong>Number of issues: 0</strong></p>
+			<p><strong>Number of issues: 2</strong></p>
 			<p><strong>Number of unit tests: 0</strong></p>
 		</div>
 
@@ -54,7 +54,7 @@
 			<p>Matthew is a 3rd-year Computer Science major at the University of Texas at Austin. He is the vice-president of Lambda Omega Alpha, an independent Catholic Service Fraternity on campus. In his very little free time he enjoys watching Netflix and spending quality time with friends.</p>
 			<p><strong>Responsibilities: </strong>front-end, design</p>
 			<p><strong>Number of commits: 35</strong></p>
-			<p><strong>Number of issues: 24</strong></p>
+			<p><strong>Number of issues: 41</strong></p>
 			<p><strong>Number of unit tests: 0</strong></p>
 		</div>
 
@@ -74,11 +74,11 @@
 	<div id="stats" class="about-section">
 		<h1><strong>Stats</strong></h1>
 		<p><strong>Number of commits: 191</strong></p>
-		<p><strong>Number of issues: 29</strong></p>
+		<p><strong>Number of issues: 50</strong></p>
 		<p><strong>Number of unit tests: 12</strong></p>
 		<p><strong><a href="http://docs.apimagicthegatheringio.apiary.io">Link to Apiary API</strong></p>
 		<p><strong><a href="https://github.com/jtd2226/magicdbswe/issues">Link to Github Issue Tracker</a></strong></p>
-		<p><strong><a href="https://github.com/jtd2226/magicdbswe">Link to Github Repo</a></strong></p>
+		<p><strong><a href="https://github.com/jtd2226/magicdbswe/tree/dev">Link to Github Repo</a></strong></p>
 	</div>
 
 	<div class="divider"></div>
