photorealitsic stuff is done :0

--- a/app/templates/cool.html
+++ b/app/templates/cool.html
@@ -6,5 +6,7 @@
 <img src = 'static/images/jose_old.png'>
 <img src = 'static/images/joel_old.png'>
 <img src = 'static/images/nicc_old.png'>
+<img src = 'static/images/matthew_old.png'>
+<img src = 'static/images/nestor_old.png'>
 
 {%endblock%}
