added visulization page with nothing on it

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -79,6 +79,10 @@
 		<p><strong><a href="http://docs.apimagicthegatheringio.apiary.io">Link to Apiary API</strong></p>
 		<p><strong><a href="https://github.com/jtd2226/magicdbswe/issues">Link to Github Issue Tracker</a></strong></p>
 		<p><strong><a href="https://github.com/jtd2226/magicdbswe/tree/dev">Link to Github Repo</a></strong></p>
+		<p><strong><a href="http://google.com">Link to Presentation</a></strong></p>
+		<p><strong>Link to <a href="/visualization">Visualization</a> of <a href="http://ggnoswe.me"> ggnoswe </a></strong></p>
+
+
 	</div>
 
 	<div class="divider"></div>
