--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,5 +1,33 @@
 {%extends "base.html"%}
 
 {%block content%}
+	<link rel="stylesheet" type="text/css" href="/static/css/search-style.css">
+	<h1><strong><em>Cards</em></strong></h1>
 
+	<div class="container-fluid">
+		{% for card in cards %}
+			<div class="model-inst">
+				<img src=
+				{% if card.art.lower() != "none" %}
+					{{ card.art }}
+				{% else %}
+					{{"http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=253575&type=card"}}
+				{% endif %}
+				width="200" class="img-fluid">
+				<h4><a href={{"/cards/" + card.cardId}}>{{card.name}}</a></h4>
+			</div>
+		{% endfor %}
+	</div>
+	<div id="mdb-pagination">
+		<nav>
+			<ul class="pagination">
+				{% if page > 1 %}
+					<li class="page-item"><a class="page-link" href={{get_page_url(request.path, page - 1)}}>Previous</a></li>
+				{% endif %}
+				{% if hasNextPage %}
+					<li class="page-item"><a class="page-link" href={{get_page_url(request.path, page + 1)}}>Next</a></li>
+				{% endif %}
+			</ul>
+		</nav>
+	</div>
 {%endblock%}
