--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,11 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.js"></script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js"></script>
+	    <script>
+	    	function magicSearch() {
+	    		window.location.href = "/search/" + document.getElementById("magic-db-search-query").value;
+	    	}
+	    </script>
 	</head>
 
 
@@ -50,6 +55,12 @@
 						</li>
 						<li {%if request.path == '/about'%} class="active"{% endif %}>
 							<a href="/about">About</a>
+						</li>
+						<li>
+						    <input type="text" class="form-control" id="magic-db-search-query" placeholder="Type your search text here." style="position: relative; top: 8px;">
+						</li>
+						<li>
+							<button type="submit" class="btn btn-default" onclick="magicSearch()" style="position: relative; top: 8px; left: -3px;">Submit!</button>
 						</li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
