--- a/app/templates/search-artists.html
+++ b/app/templates/search-artists.html
@@ -6,28 +6,28 @@
 	<ul class="nav nav-pills" role="tablist">
 		<li style="position: relative; top: -15px; margin-right: 5px;"><h3><span class="label label-default">Search in:</span></h3><li>
 		<li role="presentation"><a href={{"/search/cards/" + searchText | replace(" ", "%20")}}>Cards</a></li>
-		<li role="presentation" class="active"><a href="#">Sets</a></li>
+		<li role="presentation"><a href={{"/search/sets/" + searchText | replace(" ", "%20")}}>Sets</a></li>
 		<li role="presentation"><a href={{"/search/subtypes/" + searchText | replace(" ", "%20")}}>Subtypes</a></li>
-		<li role="presentation"><a href={{"/search/artists/" + searchText | replace(" ", "%20")}}>Artists</a></li>
+		<li role="presentation" class="active"><a href="#">Artists</a></li>
 	</ul>
-	{% if sets|length %}
-		<h1><strong><em>Sets</em></strong></h1>
+	{% if artists|length %}
+		<h1><strong><em>Artists</em></strong></h1>
 		<div class="container-fluid">
-			{% for set in sets %}
+			{% for artist in artists %}
 				<div class="model-inst">
 					<img src=
-					{% if set.symbol.lower() != "none" %}
-						{{ set.symbol }}
+					{% if artist.cards.first().art.lower() != "none" %}
+						{{ artist.cards.first().art }}
 					{% else %}
-						{{"https://tournamentcenter.eu/sites/default/files/mtg-logo.png"}}
+						{{"http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=253575&type=card"}}
 					{% endif %}
-					width="400" class="img-fluid">
-					<h4><a href={{"/sets/" + set.code}}>{{set.name}}</a></h4>
+					width="200" class="img-fluid">
+					<h4><a href={{"/artists&name=\"" ~ artist.name.replace(" ", "%20") ~ "\""}}>{{artist.name}}</a></h4>
 				</div>
 			{% endfor %}
 		</div>
 	{% else %}
-		<h1><strong>Sorry! No sets found! Click on one of the other buttons to search elsewhere.</strong></h1>
+		<h1><strong>Sorry! No subtypes found! Click on one of the other buttons to search elsewhere.</strong></h1>
 	{% endif %}
 	<div id="mdb-pagination">
 		<nav>
