my b small change rip

--- a/app/templates/search-artists.html
+++ b/app/templates/search-artists.html
@@ -27,7 +27,7 @@
 			{% endfor %}
 		</div>
 	{% else %}
-		<h1><strong>Sorry! No subtypes found! Click on one of the other buttons to search elsewhere.</strong></h1>
+		<h1><strong>Sorry! No artists found! Click on one of the other buttons to search elsewhere.</strong></h1>
 	{% endif %}
 	<div id="mdb-pagination">
 		<nav>
