better default image :)

--- a/app/templates/subtypes.html
+++ b/app/templates/subtypes.html
@@ -97,7 +97,7 @@
 				{% if imageUrls[subtype.name] != "none" %}
 					{{ imageUrls[subtype.name] }}
 				{% else %}
-					{{"http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=253575&type=card"}}
+					{{"https://upload.wikimedia.org/wikipedia/en/a/aa/Magic_the_gathering-card_back.jpg"}}
 				{% endif %}
 				width="200" class="img-fluid">
 				<h4><a href={{"/subtypes/" + subtype.name}}>{{subtype.name}}</a></h4>
@@ -119,7 +119,7 @@
 <!--
 	<div class="container-fluid">
 		<div class="model-inst">
-			<img src="http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=253575&type=card" class="img-fluid">
+			<img src="https://upload.wikimedia.org/wikipedia/en/a/aa/Magic_the_gathering-card_back.jpg" class="img-fluid">
 			<h4><a href="subtypes-instance.html?name=&quot;Wurm&quot;&id=0b45d0cdfbf851a256d96b7586c2e98ebcfaeef7">Wurm</h4>
 		</div>
 
