--- a/app/templates/search-artists.html
+++ b/app/templates/search-artists.html
@@ -5,9 +5,9 @@
 
 	<ul class="nav nav-pills" role="tablist">
 		<li style="position: relative; top: -15px; margin-right: 5px;"><h3><span class="label label-default">Search in:</span></h3><li>
-		<li role="presentation"><a href={{"/search/cards/" + searchText | replace(" ", "%20")}}>Cards</a></li>
-		<li role="presentation"><a href={{"/search/sets/" + searchText | replace(" ", "%20")}}>Sets</a></li>
-		<li role="presentation"><a href={{"/search/subtypes/" + searchText | replace(" ", "%20")}}>Subtypes</a></li>
+		<li role="presentation"><a href={{"/search/" + orVal + "/cards/" + searchText | replace(" ", "%20")}}>Cards</a></li>
+		<li role="presentation"><a href={{"/search/" + orVal + "/sets/" + searchText | replace(" ", "%20")}}>Sets</a></li>
+		<li role="presentation"><a href={{"/search/" + orVal + "/subtypes/" + searchText | replace(" ", "%20")}}>Subtypes</a></li>
 		<li role="presentation" class="active"><a href="#">Artists</a></li>
 	</ul>
 	{% if artists|length %}
