--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,10 +14,10 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.js"></script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js"></script>
 	    <script>
-	    	function magicSearch() {
-	    		window.location.href = "/search/" + document.getElementById("magic-db-search-query").value;
-	    	}
-	    </script>
+            function magicSearch(orVal) {
+                window.location.href = "/search/" + orVal + "/" + document.getElementById("magic-db-search-query").value;
+            }
+    	</script>
 	</head>
 
 
@@ -59,9 +59,17 @@
 						<li>
 						    <input type="text" class="form-control" id="magic-db-search-query" placeholder="Type your search text here." style="position: relative; top: 8px;">
 						</li>
-						<li>
-							<button type="submit" class="btn btn-default" onclick="magicSearch()" style="position: relative; top: 8px; left: -3px;">Submit!</button>
-						</li>
+						
+			            <li>
+			                <div class="dropdown" style="position: relative; top: 8px; left: -3px;">
+			                    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Search AND/OR
+			                    <span class="caret"></span></button>
+			                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+			                        <li><a id="and-search" onclick="magicSearch(&quot;and&quot;)">AND</a></li>
+			                        <li><a id="or-search" onclick="magicSearch(&quot;or&quot;)">OR</a></li>
+			                    </ul>
+			                </div>
+			            </li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
