changed search box

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -42,10 +42,10 @@
             <li><a href="artists">Artists</a></li>
             <li><a href="about">About</a></li>
             <li>
-                <input type="text" class="form-control" id="magic-db-search-query" placeholder="Type your search text here." style="position: relative; top: 8px;">
+                <input type="text" class="form-control" id="magic-db-search-query" placeholder="Type your search text here." style="position: relative; top: 8px; width: 500px;">
             </li>
             <li>
-                <div class="dropdown" style="position: relative; top: 8px; left: -3px;">
+                <div class="dropdown" style="position: relative; top: 8px; left: -7px;">
                     <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Search AND/OR
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
