--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,9 +11,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="static/css/index.css">
     <script>
-            function magicSearch(orVal) {
-                window.location.href = "/search/" + orVal + "/" + document.getElementById("magic-db-search-query").value;
+         function magicSearch(orVal) {
+            var searchVal = document.getElementById("magic-db-search-query").value;
+            if (searchVal) {
+                window.location.href = "/search/" + orVal + "/" + searchVal;
             }
+        }
     </script>
   </head>
   
@@ -42,7 +45,7 @@
             <li><a href="artists">Artists</a></li>
             <li><a href="about">About</a></li>
             <li>
-                <input type="text" class="form-control" id="magic-db-search-query" placeholder="Type your search text here." style="position: relative; top: 8px; width: 500px;">
+                <input type="text" class="form-control" id="magic-db-search-query" placeholder="Type here." style="position: relative; top: 8px; width: 20vw;">
             </li>
             <li>
                 <div class="dropdown" style="position: relative; top: 8px; left: -7px;">
