I HATE MYSELF FOR THIS MISTAKE GRRRRRRRRRRRRRR.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -64,10 +64,9 @@
 						</li>
 						
 			            <li>
-			                <div class="dropdown" style="position: relative; top: 8px; left: -7px;">
-			                    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Search AND/OR
-			                    <span class="caret"></span></button>
-			                    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+			                <div id="search-menu-div" class="dropdown" style="position: relative; top: 8px; left: -7px;">
+			                    <button class="btn btn-default dropdown-toggle" type="button" id="search-menu" data-toggle="dropdown">Search AND/OR<span class="caret"></span></button>
+			                    <ul class="dropdown-menu" role="menu" aria-labelledby="search-menu">
 			                        <li><a id="and-search" onclick="magicSearch(&quot;and&quot;)">AND</a></li>
 			                        <li><a id="or-search" onclick="magicSearch(&quot;or&quot;)">OR</a></li>
 			                    </ul>
