--- a/app/static/css/instance.css
+++ b/app/static/css/instance.css
@@ -10,6 +10,12 @@ h1 {
   text-align: center;
 }
 
+.model-inst {
+	display: inline-block;
+	text-align: center;
+	padding: 1%;
+}
+
 img {
 	display: block;
 	margin: auto;
