visualization halfway there

--- a/app/templates/visualization.html
+++ b/app/templates/visualization.html
@@ -1,5 +1,9 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
+{%extends "base.html"%}
+
+{%block content%}
+<center><h2><a href = "http://ggnoswe.me">ggnoswe.me</a></h2></center>
+
+
 <style>
 
 body {
@@ -11,110 +15,140 @@ body {
 
 form {
   position: absolute;
-  right: 10px;
-  top: 10px;
+  right: 25px;
+  top: 50px;
 }
 
-path {
-  stroke: #fff;
-  fill-rule: evenodd;
+.chart div {
+  font: 10px sans-serif;
+  background-color: steelblue;
+  text-align: right;
+  padding: 3px;
+  margin: 1px;
+  color: white;
 }
-p {
-  color: black;
-  font-size: 2em;
-}
+
 </style>
-<body>
 <form>
   <label><input type="radio" name="mode" value="size"> Size</label>
   <label><input type="radio" name="mode" value="count" checked> Count</label>
 </form>
+
 <script src="//d3js.org/d3.v3.min.js"></script>
-<!DOCTYPE html>
-<meta charset="utf-8">
-<style>
-
-path {
-  stroke: #fff;
-  fill-rule: evenodd;
-}
-
-text {
-  font-family: Arial, sans-serif;
-  font-size: 12px;
-}
-
-</style>
-<body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
 <script>
-
 
 var width = 960,
     height = 700,
-    radius = Math.min(width, height) / 2,
-    color = d3.scale.category20c();
+    radius = Math.min(width, height) / 2;
+
+var x = d3.scale.linear()
+    .range([0, 2 * Math.PI]);
+
+var y = d3.scale.linear()
+    .range([0, radius]);
+
+var color = d3.scale.category20c();
 
 var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height)
   .append("g")
-    .attr("transform", "translate(" + width / 2 + "," + height * .52 + ")");
+    .attr("transform", "translate(" + width / 2 + "," + (height / 2 + 10) + ")");
 
 var partition = d3.layout.partition()
-    .sort(null)
-    .size([2 * Math.PI, radius * radius])
-    .value(function(d) { return 1; });
+    .value(function(d) { return d.size; });
 
 var arc = d3.svg.arc()
-    .startAngle(function(d) { return d.x; })
-    .endAngle(function(d) { return d.x + d.dx; })
-    .innerRadius(function(d) { return Math.sqrt(d.y); })
-    .outerRadius(function(d) { return Math.sqrt(d.y + d.dy); });
+    .startAngle(function(d) { return Math.max(0, Math.min(2 * Math.PI, x(d.x))); })
+    .endAngle(function(d) { return Math.max(0, Math.min(2 * Math.PI, x(d.x + d.dx))); })
+    .innerRadius(function(d) { return Math.max(0, y(d.y)); })
+    .outerRadius(function(d) { return Math.max(0, y(d.y + d.dy)); });
 
-d3.json("flare.json", function(error, root) {
-  if (error) throw error;
+d3.json("flare", function(error, root) {
+  var g = svg.selectAll("g")
+      .data(partition.nodes(root))
+    .enter().append("g");
 
-  var path = svg.datum(root).selectAll("path")
-      .data(partition.nodes)
-    .enter().append("path")
-      .attr("display", function(d) { return d.depth ? null : "none"; }) // hide inner ring
-      .attr("d", arc)
-      .style("stroke", "#fff")
-      .style("fill", function(d) { return color((d.children ? d : d.parent).name); })
-      .style("fill-rule", "evenodd")
-      .each(stash);
+  var path = g.append("path")
+    .attr("d", arc)
+    .style("fill", function(d) { return color((d.children ? d : d.parent).name); })
+    .on("click", click);
 
-  d3.selectAll("input").on("change", function change() {
-    var value = this.value === "count"
-        ? function() { return 1; }
-        : function(d) { return d.size; };
+  var text = g.append("text")
+    .attr("transform", function(d) { return "rotate(" + computeTextRotation(d) + ")"; })
+    .attr("x", function(d) { return y(d.y); })
+    .attr("dx", "6") // margin
+    .attr("dy", ".35em") // vertical-align
+    .attr("visibility",function(d) { return d.dx < 0.01? "hidden" : "visible"})
+    .text(function(d) {
+        if(d.name.length > 20)
+          return d.name.substring(0,20)+'...';
+        else
+          return d.name;
+      });
 
-    path
-        .data(partition.value(value).nodes)
-      .transition()
-        .duration(1500)
-        .attrTween("d", arcTween);
-  });
+  function click(d) {
+    var total = d.dx;
+    // fade out all text elements
+    text.transition().attr("opacity", 0);
+
+    path.transition()
+      .duration(750)
+      .attrTween("d", arcTween(d))
+      .each("end", function(e, i) {
+          // check if the animated element's data e lies within the visible angle span given in d
+          if (e.x >= d.x && e.x < (d.x + d.dx)) {
+            // get a selection of the associated text element
+            var arcText = d3.select(this.parentNode).select("text");
+            // fade in the text element and recalculate positions
+            arcText.transition().duration(750)
+              .attr("opacity", 1)
+              .attr("transform", function() { return "rotate(" + computeTextRotation(e) + ")" })
+              .attr("x", function(d) { return y(d.y); })
+              .attr("visibility",function(d) { return d.dx/total < 0.01? "hidden" : "visible"});
+          }
+      });
+  }
 });
-
-// Stash the old values for transition.
-function stash(d) {
-  d.x0 = d.x;
-  d.dx0 = d.dx;
-}
-
-// Interpolate the arcs in data space.
-function arcTween(a) {
-  var i = d3.interpolate({x: a.x0, dx: a.dx0}, a);
-  return function(t) {
-    var b = i(t);
-    a.x0 = b.x;
-    a.dx0 = b.dx;
-    return arc(b);
-  };
-}
 
 d3.select(self.frameElement).style("height", height + "px");
 
+// Interpolate the scales!
+function arcTween(d) {
+  var xd = d3.interpolate(x.domain(), [d.x, d.x + d.dx]),
+      yd = d3.interpolate(y.domain(), [d.y, 1]),
+      yr = d3.interpolate(y.range(), [d.y ? 20 : 0, radius]);
+  return function(d, i) {
+    return i
+        ? function(t) { return arc(d); }
+        : function(t) { x.domain(xd(t)); y.domain(yd(t)).range(yr(t)); return arc(d); };
+  };
+}
+
+function computeTextRotation(d) {
+  return (x(d.x + d.dx / 2) - Math.PI / 2) / Math.PI * 180;
+}
+
 </script>
+
+{%endblock%}
+
+<!--script>
+    $("#instance-main").append("<h4><strong>Number of Cards: </strong>1</h4>");
+    $("#instance-main").append("<h4><strong>Number of Sets: </strong>1</h4>");
+    
+    var xmlHttp = new XMLHttpRequest();
+    xmlHttp.onreadystatechange = function() {
+        if (this.readyState == 4 && this.status == 200) { //Successful GET request
+            var card = JSON.parse(this.responseText);
+
+            $("#instance-main").prepend("<h1>" + artistName + "</h1>");
+            $("#instance-main").append("<h4><strong>Cards: </strong>" + card["card"]["name"] + "</h4>");
+        $("#instance-main").append("<h4><strong>Sets: </strong>" + card["card"]["setName"] + "</h4>");
+        }
+    };
+
+    var cardId = getUrlParams()["id"];
+      xmlHttp.open("GET", "https://api.magicthegathering.io/v1/cards/" + cardId, true); 
+      xmlHttp.send(null);
+  </script>
