--- a/app/templates/artists-instance.html
+++ b/app/templates/artists-instance.html
@@ -15,21 +15,33 @@
 		<h4><strong>Number of Cards: </strong>{{artists_instance.numCards}}</h4>
 		<h4><strong>Number of Sets: </strong>{{artists_instance.numSets}}</h4>
 		<h4>
-		<h4>
-			<strong>Cards:</strong><br>
+		<h3><strong>Cards:</strong><br></h3>
 			{% if artists_instance.cards.all() %}
 				{% for card in artists_instance.cards.all() %}
-					<a href = {{"/cards/" + card.cardId}}> {{card.name}}</a>
-					<br>
+					<div class="model-inst">
+						<img src=
+						{% if card.art.lower() != "none" %}
+							{{ card.art }}
+						{% else %}
+							{{"https://upload.wikimedia.org/wikipedia/en/a/aa/Magic_the_gathering-card_back.jpg"}}
+						{% endif %}
+						width="150" class="img-fluid">
+						<h4><a href={{"/cards/" + card.cardId}}>{{card.name}}</a></h4>
+					</div>
 				{% endfor %}
 			{% endif %}
-		</h4>
-		<h4>
-			<strong>Sets:</strong><br>
-			{% for set in artists_instance.sets %}
-				<a href = {{"/sets/" + set.code}}> {{set.name}}</a>
-				<br>
-			{% endfor %}
-		</h4>
+		<h1><strong>Sets:</strong><br></h1>
+		{% for set in artists_instance.sets %}
+			<div class="model-inst">
+				<img src=
+				{% if set.symbol.lower() != "none" %}
+					{{ set.symbol }}
+				{% else %}
+					{{"https://tournamentcenter.eu/sites/default/files/mtg-logo.png"}}
+				{% endif %}
+				width="250" class="img-fluid">
+				<h4><a href={{"/sets/" + set.code}}>{{set.name}}</a></h4>
+			</div>
+		{% endfor %}
 	</div>
 {% endblock %}
