--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -76,7 +76,7 @@
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
-		<div>
+		<div id="magic-main-block">
 			{%block content%}{%endblock%}
 		</div>
 
