--- a/app/templates/visualization.html
+++ b/app/templates/visualization.html
@@ -60,7 +60,7 @@ var luminance = d3.scale.sqrt()
     .clamp(true)
     .range([90, 20]);
 
-var svg = d3.select("body").append("svg")
+var svg = d3.select("#magic-main-block").append("svg")
     .attr("width", margin.left + margin.right)
     .attr("height", margin.top + margin.bottom)
   .append("g")
@@ -77,7 +77,7 @@ var arc = d3.svg.arc()
     .outerRadius(function(d) { return radius / 3 * (d.depth + 1) - 1; });
 
 //Tooltip description
-var tooltip = d3.select("body")
+var tooltip = d3.select("#magic-main-block")
     .append("div")
     .attr("id", "tooltip")
     .style("position", "absolute")
@@ -289,7 +289,8 @@ function updateArc(d) {
   return {depth: d.depth, x: d.x, dx: d.dx};
 }
 
-d3.select(self.frameElement).style("height", margin.top + margin.bottom + "px");
+// d3.select(self.frameElement).style("height", margin.top + margin.bottom + "px");
+d3.select("#magic-main-block").attr("align","center");
 
 </script>
 
